# IPROP_project

./: .gitignore  CMakeLists.txt  README
CoupledProblem/: CMakeLists.txt  compile_commands.json
CoupledProblem/config/: configuration.json
CoupledProblem/include/: BlockSchurPreconditioner.hpp  BlockSchurPreconditioner_impl.hpp  BoundaryValues.hpp  CollectorGeometryNS.hpp  CompleteProblem.hpp  CompleteProblem_impl.hpp  Complete_problem_impl_con_modifiche_homo.hpp  data_struct.hpp  drift_diffusion.hpp  drift_diffusion_impl.hpp
CoupledProblem/output/NS_DD_Simulation/: solution_00.0.vtu  solution_01.0.vtu  solution_02.0.vtu  solution_03.0.vtu  solution_04.0.vtu  solution_05.0.vtu  solution_06.0.vtu  solution_07.0.vtu  solution_08.0.vtu  solution_09.0.vtu  solution_10.0.vtu  solution_11.0.vtu  solution_12.0.vtu  solution_13.0.vtu  solution_14.0.vtu  solution_15.0.vtu  solution_16.0.vtu  solution_17.0.vtu  solution_18.0.vtu  solution_19.0.vtu  solution_20.0.vtu  solution_21.0.vtu  solution_22.0.vtu  solution_23.0.vtu  solution_24.0.vtu  solution_25.0.vtu  solution_26.0.vtu  solution_27.0.vtu  solution_28.0.vtu  solution_29.0.vtu  solution_30.0.vtu  solution_31.0.vtu  solution_32.0.vtu  solution_33.0.vtu  solution_34.0.vtu  solution_35.0.vtu  solution_36.0.vtu  solution_37.0.vtu  solution_38.0.vtu  solution_39.0.vtu  (+28 more)
CoupledProblem/output/NS_DD_Simulation_mesh_nuova/: solution_00.0.vtu  solution_01.0.vtu  solution_02.0.vtu  solution_03.0.vtu  solution_04.0.vtu  solution_05.0.vtu  solution_06.0.vtu  solution_07.0.vtu  solution_08.0.vtu  solution_09.0.vtu  solution_10.0.vtu  solution_100.0.vtu  solution_101.0.vtu  solution_102.0.vtu  solution_103.0.vtu  solution_104.0.vtu  solution_105.0.vtu  solution_106.0.vtu  solution_107.0.vtu  solution_108.0.vtu  solution_109.0.vtu  solution_11.0.vtu  solution_110.0.vtu  solution_111.0.vtu  solution_112.0.vtu  solution_113.0.vtu  solution_114.0.vtu  solution_115.0.vtu  solution_116.0.vtu  solution_117.0.vtu  solution_118.0.vtu  solution_119.0.vtu  solution_12.0.vtu  solution_120.0.vtu  solution_121.0.vtu  solution_122.0.vtu  solution_123.0.vtu  solution_124.0.vtu  solution_125.0.vtu  solution_126.0.vtu  (+812 more)
CoupledProblem/src/: config_reader.cpp  main.cpp
PNjunction/: CMakeLists.txt  compile_commands.json
PNjunction/include/: DriftDiffusion.hpp  DriftDiffusion_impl.hpp  Electrical_Constants.hpp  Electrical_Values.hpp  Electrical_Values_impl.hpp
PNjunction/src/: dd_2D.cc
TimeDependentNS/: CMakeLists.txt  compile_commands.json
TimeDependentNS/include/: BlockSchurPreconditioner.hpp  BlockSchurPreconditioner_impl.hpp  BoundaryValues.hpp  InsIMEX.hpp  InsIMEX_impl.hpp
TimeDependentNS/output/PN_Simulation/: solution_00.0.vtu  solution_01.0.vtu
TimeDependentNS/src/: time_dependent_navier_stokes.cc
config/: GeoMeshFile.geo  PNjunction.geo  coarse_WW.geo  configuration.json
include/: BlockSchurPreconditioner.hpp  BlockSchurPreconditioner_impl.hpp  BoundaryValues.hpp  CollectorGeometryNS.hpp  Compleate_problem.hpp  Compleate_problem_impl.hpp  Complete_problem.hpp  Complete_problem_impl.hpp  Electrical_Values.hpp  Electrical_Values_impl.hpp  GmshPoint.hpp  InsIMEX.hpp  InsIMEX_impl.hpp  NACA_points_generator.hpp  PoissonProblem.h  PoissonProblem_imp.h  Time.hpp  config_reader.hpp  data4geo.hpp  data_struct.hpp  drift_diffusion.hpp  drift_diffusion_impl.hpp  gmsh_runner.hpp
meshes/: Structured_Square.msh  WireWire70.msh  WireWire_new.msh  concentric_cylinders.msh  concentric_cylinders_fine.msh
output/DD_Simulation/: solution_00.0.vtu  solution_01.0.vtu  solution_02.0.vtu  solution_03.0.vtu  solution_04.0.vtu  solution_05.0.vtu  solution_06.0.vtu  solution_07.0.vtu  solution_08.0.vtu
src/: GmshPoint.cpp  NACA_points_generator.cpp  config_reader.cpp  data4geo.cpp  gmsh_runner.cpp  main.cpp
